URLUtils: Got rid of primeNetworkConnection() and getURI() and getRedirectString()